--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $synx-dark-color: #141819;
 $synx-darker-color: #111415;
 $synx-darkest-color: #0d1011;
@@ -361,37 +363,37 @@ div#root {
   }
 
   .col-1-sm {
-    width: ($width / 12) - ($gutter * 11 / 12);
+    width: math.div($width, 12) - ($gutter * math.div(11, 12));
   }
   .col-2-sm {
-    width: ($width / 6) - ($gutter * 10 / 12);
+    width: math.div($width, 6) - ($gutter * math.div(10, 12));
   }
   .col-3-sm {
-    width: ($width / 4) - ($gutter * 9 / 12);
+    width: math.div($width, 4) - ($gutter * math.div(9, 12));
   }
   .col-4-sm {
-    width: ($width / 3) - ($gutter * 8 / 12);
+    width: math.div($width, 3) - ($gutter * math.div(8, 12));
   }
   .col-5-sm {
-    width: ($width / (12 / 5)) - ($gutter * 7 / 12);
+    width: math.div($width, math.div(12, 5)) - ($gutter * math.div(7, 12));
   }
   .col-6-sm {
-    width: ($width / 2) - ($gutter * 6 / 12);
+    width: math.div($width, 2) - ($gutter * math.div(6, 12));
   }
   .col-7-sm {
-    width: ($width / (12 / 7)) - ($gutter * 5 / 12);
+    width: math.div($width, math.div(12, 7)) - ($gutter * math.div(5, 12));
   }
   .col-8-sm {
-    width: ($width / (12 / 8)) - ($gutter * 4 / 12);
+    width: math.div($width, math.div(12, 8)) - ($gutter * math.div(4, 12));
   }
   .col-9-sm {
-    width: ($width / (12 / 9)) - ($gutter * 3 / 12);
+    width: math.div($width, math.div(12, 9)) - ($gutter * math.div(3, 12));
   }
   .col-10-sm {
-    width: ($width / (12 / 10)) - ($gutter * 2 / 12);
+    width: math.div($width, math.div(12, 10)) - ($gutter * math.div(2, 12));
   }
   .col-11-sm {
-    width: ($width / (12 / 11)) - ($gutter * 1 / 12);
+    width: math.div($width, math.div(12, 11)) - ($gutter * math.div(1, 12));
   }
   .col-12-sm {
     width: $width;
@@ -399,37 +401,37 @@ div#root {
 
   @media only screen and (min-width: $breakpoint-med) {
     .col-1 {
-      width: ($width / 12) - ($gutter * 11 / 12);
+      width: math.div($width, 12) - ($gutter * math.div(11, 12));
     }
     .col-2 {
-      width: ($width / 6) - ($gutter * 10 / 12);
+      width: math.div($width, 6) - ($gutter * math.div(10, 12));
     }
     .col-3 {
-      width: ($width / 4) - ($gutter * 9 / 12);
+      width: math.div($width, 4) - ($gutter * math.div(9, 12));
     }
     .col-4 {
-      width: ($width / 3) - ($gutter * 8 / 12);
+      width: math.div($width, 3) - ($gutter * math.div(8, 12));
     }
     .col-5 {
-      width: ($width / (12 / 5)) - ($gutter * 7 / 12);
+      width: math.div($width, math.div(12, 5)) - ($gutter * math.div(7, 12));
     }
     .col-6 {
-      width: ($width / 2) - ($gutter * 6 / 12);
+      width: math.div($width, 2) - ($gutter * math.div(6, 12));
     }
     .col-7 {
-      width: ($width / (12 / 7)) - ($gutter * 5 / 12);
+      width: math.div($width, math.div(12, 7)) - ($gutter * math.div(5, 12));
     }
     .col-8 {
-      width: ($width / (12 / 8)) - ($gutter * 4 / 12);
+      width: math.div($width, math.div(12, 8)) - ($gutter * math.div(4, 12));
     }
     .col-9 {
-      width: ($width / (12 / 9)) - ($gutter * 3 / 12);
+      width: math.div($width, math.div(12, 9)) - ($gutter * math.div(3, 12));
     }
     .col-10 {
-      width: ($width / (12 / 10)) - ($gutter * 2 / 12);
+      width: math.div($width, math.div(12, 10)) - ($gutter * math.div(2, 12));
     }
     .col-11 {
-      width: ($width / (12 / 11)) - ($gutter * 1 / 12);
+      width: math.div($width, math.div(12, 11)) - ($gutter * math.div(1, 12));
     }
     .col-12 {
       width: $width;
